# keylessh

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  package-lock.json  package.json  replit.md  vite.config.ts
.github/workflows/: azure-deploy.yml  deploy-gateway.yml  release.yml
attached_assets/: Pasted--TideCloak-React-SDK-Quick-Start-Guide-If-you-re-new-to_1766031035535.txt
bridges/punchd-bridge/: admin.sh  package-lock.json  start.sh
bridges/punchd-bridge-rs/: Cargo.toml  README.md
bridges/ssh-bridge-rs/: Cargo.toml
bridges/tcp-bridge-rs/: Cargo.toml  Dockerfile  README.md
bridges/tcp-bridge-rs/azure/: container-app.yaml  deploy.sh
bridges/tcp-bridge-rs/src/: main.rs  tray.rs
client/: index.html
client/src/: App.tsx  index.css
data/: tidecloak.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPERS.md  STUN-WAF.md
docs/diagrams/: 01-system-overview.puml  02-waf-registration.puml  03-http-relay.puml  04-oidc-login.puml  05-hole-punching.puml  06-turn-fallback.puml  07-service-worker-datachannel.puml  08-multi-backend-routing.puml  09-complete-lifecycle.puml
nginx/: client-ca.crt  client-cert.pem  nginx-mtls.conf  server-tls.crt  server-tls.key
script/tidecloak/: init-tidecloak.sh  realm.json  start.sh
script/waf/: start.sh
server/: auth.ts  index.ts  logger.ts  routes.ts  static.ts  storage.ts  vite.ts  wsBridge.ts
server/lib/: stripe.ts  tidecloakApi.ts
shared/: schema.ts
shared/config/: roles.ts
signal-server-rs/: Cargo.toml
stun-server/: Dockerfile  deploy.sh  fly.toml  package-lock.json  package.json
tcp-bridge/: README.md
tide-ssp/: CMakeLists.txt  Dockerfile
tide-ssp/installer/: CustomActions.c  Product.wxs  PunchdGateway.xml  WorkstationProduct.wxs  workstationbuild.bat
tide-ssp/src/: TideCSP.def  csp.c  logon.c  ssp.c
waf/: package-lock.json  package.json  start.sh
(+146 files in other folders)
