[package]
name = "tcp-bridge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
ring = "0.17"
url = "2"
dashmap = "6"
tower = "0.5"

[profile.release]
strip = true
lto = true
